# iZprime

./: .gitignore  .zenodo.json  CITATION.cff  ChangeLog  Doxyfile  LICENSE  Makefile  Makefile.md  README.md  config.mk.example  todos.txt
.github/workflows/: ci.yml  update-homebrew-formula.yml
bindings/: README.md
bindings/go/: go.mod  izprime.go
bindings/node/: index.js  package.json
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: demo.py
bindings/python/izprime/: __init__.py  _ffi.py
bindings/rust/: Cargo.toml
docs/: Makefile.md  benchmarks.md  bindings.md  cli.md  contribute.md  mainpage.md  packages.md  release.md  tests.md
docs/latex_src/: pseudocode.tex  style.tex
docs/paper/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  psuedocode.aux  psuedocode.fdb_latexmk  psuedocode.fls  (+4 more)
examples/: README.md  SiZ_range.c  ffi_demo.c  p_genrators.c  sieve_iZm_range.c  sieve_primes.c
include/: bitmap.h  cli.h  iZ.h  iZ_api.h  iZ_toolkit.h  iZm.h  int_arrays.h  izprime_ffi.h  logger.h  platform.h  test_api.h  tests.h  utils.h  vx_seg.h
mk/: docs.mk  help.mk  install.mk  modes.mk  package.mk  tests.mk
output/: SiZ_stream_test2.txt  p_gen_20213053.txt  p_gen_20213057.txt  p_gen_20213151.txt  p_gen_20213316.txt  p_gen_20213321.txt  p_gen_20213437.txt  test_vx_seg_streamed_primes.txt
packaging/: README.md  izprime.pc.in
plot_tools/: plot_p_sieve_results.py
py_tools/: plot_p_gen_results.py  plot_p_sieve_results.py  plot_results.py
src/: iZ_apps.c  main.c  playground.c  prime_sieve.c  utils.c
test/: test_all.c
(+409 files in other folders)
