[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "izprime"
version = "1.1.0"
description = "Python ctypes wrapper for iZprime FFI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Hazem Mounir" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["izprime"]
